[gd_scene load_steps=11 format=2]

[ext_resource path="res://vehicle.tscn" type="PackedScene" id=1]
[ext_resource path="res://inventory/scenes/item_info.tscn" type="PackedScene" id=2]
[ext_resource path="res://inventory/items/scenes/world_item.tscn" type="PackedScene" id=3]
[ext_resource path="res://inventory/scenes/inventory_player.tscn" type="PackedScene" id=4]
[ext_resource path="res://inventory/managers/inventory_manager.gd" type="Script" id=5]
[ext_resource path="res://inventory/scripts/item_spawner.gd" type="Script" id=6]

[sub_resource type="PhysicsMaterial" id=3]
rough = true

[sub_resource type="BoxShape" id=1]
extents = Vector3( 100, 1, 100 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 200, 2, 200 )

[sub_resource type="ORMSpatialMaterial" id=4]
albedo_color = Color( 0.517647, 0.380392, 0.298039, 1 )

[node name="Spatial" type="StaticBody"]
collision_mask = 3
physics_material_override = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
mesh = SubResource( 2 )
skeleton = NodePath("../..")
material/0 = SubResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 12, 0 )
light_energy = 0.5
shadow_enabled = true

[node name="vehicle" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.25 )

[node name="SpringArm" type="SpringArm" parent="vehicle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )
visible = false
spring_length = 7.5
margin = 0.5

[node name="Camera" type="Camera" parent="vehicle"]
transform = Transform( 0.707107, -0.298836, 0.640856, 0, 0.906308, 0.422618, -0.707107, -0.298836, 0.640856, 8, 6, 8 )

[node name="managers" type="Node2D" parent="."]

[node name="inventory_manager" type="Node2D" parent="managers"]
script = ExtResource( 5 )
item_in_hand_node = NodePath("../../CanvasLayer/item_in_hand")
item_void = NodePath("../../CanvasLayer/item_void")
item_info = NodePath("../../CanvasLayer/item_info")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="item_void" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button" type="Button" parent="CanvasLayer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = -10.0
margin_right = 75.0
margin_bottom = 10.0
text = "Item"
script = ExtResource( 6 )
items = [ "basic_cab" ]

[node name="inventory_player" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="item_info" parent="CanvasLayer" instance=ExtResource( 2 )]
visible = false

[node name="item_in_hand" type="Control" parent="CanvasLayer"]
mouse_filter = 2

[node name="Area" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )
item_id = "basic_cab"

[connection signal="pressed" from="CanvasLayer/Button" to="CanvasLayer/Button" method="_on_Button_pressed"]
